--- a/res/layout/battery_widget_layout.xml
+++ b/res/layout/battery_widget_layout.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="-1dp"
+        android:layout_marginRight="-2dp"
         android:layout_toLeftOf="@+id/battery"
         android:src="@drawable/battery_nub" />
 
@@ -28,7 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="@dimen/box_border_width"
-        android:src="@drawable/color_7722aa00" />
+        android:src="@drawable/color_22aa00" />
 
     <TextView
         android:id="@+id/value"
@@ -49,6 +49,6 @@
         android:layout_alignBottom="@+id/box_value"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="6dp"
-        android:background="@android:color/white" />
+        android:src="@drawable/charging" />
 
 </RelativeLayout>
