--- a/res/drawable/color_aa0000.xml
+++ b/res/drawable/color_aa0000.xml
@@ -7,8 +7,8 @@
         android:height="@dimen/box_value_height" />
     
     <corners
-        android:radius="4dp" />
+        android:radius="@dimen/box_value_border_radius" />
     
     <solid 
-        android:color="#77aa4400" />
+        android:color="#ccaa0000" />
 </shape>
