--- a/res/drawable/color_aa6600.xml
+++ b/res/drawable/color_aa6600.xml
@@ -7,8 +7,8 @@
         android:height="@dimen/box_value_height" />
     
     <corners
-        android:radius="4dp" />
+        android:radius="@dimen/box_value_border_radius" />
     
     <solid 
-        android:color="#77aa8800" />
+        android:color="#ccaa6600" />
 </shape>
