--- a/res/xml/battery_widget_info.xml
+++ b/res/xml/battery_widget_info.xml
@@ -3,7 +3,7 @@
     android:minWidth="120dp"
     android:minHeight="40dp"
     android:updatePeriodMillis="100"
-    android:previewImage="@drawable/preview_battery"
+    android:previewImage="@drawable/ic_launcher"
     android:initialLayout="@layout/battery_widget_layout"
     android:resizeMode="horizontal|vertical">
 </appwidget-provider>
