--- a/res/xml/battery_widget_info.xml
+++ b/res/xml/battery_widget_info.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="120dp"
+    android:minWidth="40dp"
     android:minHeight="40dp"
     android:updatePeriodMillis="100"
     android:previewImage="@drawable/ic_launcher"
-    android:initialLayout="@layout/battery_widget_box_layout"
-    android:resizeMode="horizontal|vertical">
+    android:initialLayout="@layout/battery_widget_ring_layout">
 </appwidget-provider>
